added logout and some fixes, no code changes until unit tests are created\!

--- a/frontend/simple.html
+++ b/frontend/simple.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="http://crypto-js.googlecode.com/svn/tags/3.0.2/build/rollups/md5.js"></script>
+    <script src="http://crypto-js.googlecode.com/svn/tags/3.0.2/build/rollups/sha1.js"></script>
     <script src="simple.js"></script>
     <h1>Connect</h1>
     <p id="log"><p>
@@ -14,5 +14,6 @@
       username: <input id="userName" type="text" value="test-user"/> </br>
       password: <input id="password" type="password" value="abc"/> </br>
       <input type="button" id="login"  value="login!"/>
+      <input type="button" id="logout" value="logout!"/>
   </body>
 </html>
