Another huge change, added channel creation, and blocked certain information for being serialized

--- a/frontend/simple.html
+++ b/frontend/simple.html
@@ -15,5 +15,14 @@
       password: <input id="password" type="password" value="abc"/> </br>
       <input type="button" id="login"  value="login!"/>
       <input type="button" id="logout" value="logout!"/>
+      <form style="display:none;" id="createForm">
+        <h1>Create channel</h1>
+        <table>
+        <tr><td>name:</td><td><input type="text" id="name"/></td></tr>
+            <tr><td>capacity:</td><td><input type="text" id="capacity"/></td></tr>
+            <tr><td>map:</td><td><input type="text" id="map"/></td></tr>
+            <tr><td>password:</td><td><input type="text" id="cpassword"/></td></tr>
+        <tr><td><input type="button" id="createChannel" value="create!"/></td></tr>
+        </form>
   </body>
 </html>
