handling user dissonection

--- a/frontend/simple.html
+++ b/frontend/simple.html
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div id="channels" class="box" style="display:none;">
-        <h1>Avalible channels</h1>
+        <h1>Available channels</h1>
         <ul id="channelsList" class="list-group"></ul>
       </div>
       <div style="display:none;" id="loggedZone" class="box">
