new slidedeck and UI tests inital commit

--- a/frontend/simple.html
+++ b/frontend/simple.html
@@ -24,11 +24,11 @@
         <div class="wrap">
           <div class="input-group">
             <span class="input-group-addon">Username</span>
-            <input id="userName" type="text" value="test-user" class="form-control">
+            <input id="userName" type="text" class="form-control">
           </div><br/>
           <div class="input-group">
             <span class="input-group-addon">Password&nbsp;</span>
-            <input id="password" type="password" value="abc" class="form-control">
+            <input id="password" type="password" class="form-control">
           </div></br>
           <div class="btn-group">
             <button type="button" id="login" class="btn btn-default">Login</button>
