--- a/frontend/simple.html
+++ b/frontend/simple.html
@@ -50,6 +50,21 @@
       <div id="channels" class="box" style="display:none;">
         <h1>Available channels</h1>
         <ul id="channelsList" class="list-group"></ul>
+        <div id="dialog">
+          <div id="joinPasswordBox">
+            <div class="row">
+              <div class="col-lg-6">
+                <div class="input-group">
+                  <span class="input-group-addon">Password</span>
+                  <input type="text" class="form-control" id="protectedChannelPassword">
+                  <span class="input-group-btn">
+                    <button class="btn btn-default" id="joinProtectedChannel" type="button">Join</button>
+                  </span>
+                </div>
+              </div><!-- /input-group -->
+            </div><!-- /.col-lg-6 -->
+          </div>
+        </div>
       </div>
       <div style="display:none;" id="loggedZone" class="box">
         <h1>Create channel</h1>
