--- a/frontend/simple.html
+++ b/frontend/simple.html
@@ -103,8 +103,11 @@
             <button type="button" id="listChannels"  class="btn btn-default">Refresh</button>
           </div>
         </div>
+        <div class="btn-group">
+          <button type="button" id="logout" class="btn btn-default">Logout</button>
+        </div>
       </div>
-      <div/>
+    </div>
 </form>
 </body>
 </html>
